<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/colorGrey"
    android:orientation="vertical"
    android:layout_margin="0dp"
    tools:layout_editor_absoluteY="173dp"
    tools:context="com.example.ixilureazura.schedulerapp.MainActivity"
    android:id="@+id/parent">

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:id="@+id/back_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin"
        android:paddingBottom="20dp"
        android:text="@string/create_event_text_view"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/colorLight"
        android:orientation="vertical"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/enter_event_name_view" />

            <EditText
                android:id="@+id/event_name_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/cabin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/enter_event_details_view" />

            <EditText
                android:id="@+id/event_details_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/cabin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingBottom="20dp"
                android:text="@string/enter_event_date_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/event_date_edit_month"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:backgroundTint="@color/colorPrimaryDark">

                </Spinner>

                <Spinner
                    android:id="@+id/event_date_edit_day"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:backgroundTint="@color/colorPrimaryDark">

                </Spinner>

                <Spinner
                    android:id="@+id/event_date_edit_year"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:backgroundTint="@color/colorPrimaryDark">

                </Spinner>


            </LinearLayout>

            <TextView
                android:id="@+id/event_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/enter_event_time_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/event_time_edit_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:backgroundTint="@color/colorPrimaryDark">

                </Spinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"/>

                <Spinner
                    android:id="@+id/event_time_edit_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:backgroundTint="@color/colorPrimaryDark">

                </Spinner>

                <Spinner
                    android:id="@+id/event_time_edit_apm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:backgroundTint="@color/colorPrimaryDark">

                </Spinner>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_phone_black_24dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/phone_number_edit_text"
                android:fontFamily="@font/cabin"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/colorAccent"
                android:text="+"
                android:id="@+id/add_number_button"/>


        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_event_button_text"
            android:id="@+id/create_event_button_view"
            android:backgroundTint="@color/colorAccent"
            android:textSize="14dp"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
